Task 4, Address QA comments, refactor, PIT, CI, regression tests